# CodingTests

thinkcell/: CMakeLists.txt  Error.md  Task.md  interval.hpp  key_value.h  main.cpp
